# LyCIL

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
configs/: lwf.yml  smoketest_lwf.yml
configs/data/: cifar100.yml
configs/model/: icarl.yml  lwf.yml
configs/trainer/: lwf.yml  smoketest.yml
data/: .gitignore  __init__.py  buffer.py  cil_datamodule.py  datamodule_cifar100.py  datamodule_imagenet.py
data/modules/: cifar100.py
examples/: icarl-cli.py  lwf-cli.py  train_bic.py  train_der.py  train_ewc.py  train_finetune.py  train_gem.py  train_icarl.py  train_lucir.py  train_lwf.py  train_pass.py  train_podnet.py  train_replay.py  train_rmm.py  train_wa.py
lightning_cil/: __init__.py
lightning_cil/data/: buffer.py  cil_datamodule.py
lightning_cil/data/modules/: __init__.py  cifar100.py
lightning_cil/methods/: __init__.py  base.py  bic.py  der.py  ewc.py  finetune.py  gem.py  icarl.py  lucir.py  lwf.py  pass_method.py  pass_v1.py  podnet.py  replay.py  rmm.py  wa.py
models/backbone/: resnet.py
models/classifier/: cosine_classifier.py
src/lightning_cil/methods/: base.py
src/lightning_cil/metrics/: accuracy.py
src/lycil/backbone/: resnet.py
src/lycil/classifier/: cosine_classifier.py
src/lycil/data/: cil_datamodule.py
src/lycil/data/modules/: cifar100.py
src/lycil/methods/: base.py  lwf.py
test/data/: test_cifar100.py  test_dummytraining.py
utils/: __init__.py  gem_qp.py  grad_utils.py  metrics.py  pod.py
