[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lightning-cil"
version = "0.1.2"
description = "A clean, PyTorch Lightning (>2.0) continual/incremental learning (CIL) library with standard iCaRL and LUCIR implementations, exemplar memory, cosine classifier, and ready-to-run CLI examples."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "tqdm>=4.65.0",
    "numpy<2",
    "scikit-learn>=1.3.0",
    "yamlable>=1.1.1",
    "jsonargparse[signatures]>=4.26.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.0",
]

# conflict lightning and lightning-npu
[project.optional-dependencies]
lightning = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "lightning>=2.2.0",
]
lightning-npu = [
    "torch-npu>=2.1.0",
    "torchvision",
    "decorator",
    "psutil",
    "importlib_metadata",
    "lightning @ git+https://github.com/SmallPigPeppa/pytorch-lightning.git@npu_support_fp16_mixed",
]

[tool.uv]
conflicts = [
    [
        { extra = "lightning" },
        { extra = "lightning-npu" },
    ]
]

[tool.uv.build-backend]
module-name = "lightning_cil"
module-root = ""
