[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "LyCIL"
version = "0.1.2"
description = "A clean, PyTorch Lightning (2.x) continual/incremental learning (CIL) library inspired by PyCIL, with up-to-date methods, NPU support, modern interface, and ready-to-run CLI examples."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "tqdm>=4.65.2,<4.68.0",
    "numpy<2",
    "scikit-learn>=1.3.2,<1.8.0",
    "yamlable>=1.1.1,<1.2.0",
    "jsonargparse[signatures]>=4.26.2,<4.43.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "ruff",
]

# conflict lightning and lightning-npu
[project.optional-dependencies]
lightning = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "lightning>=2.2.0,<2.6.0",
]
lightning-npu = [
    "torch-npu>=2.1.0",
    "torchvision",
    "decorator",
    "psutil",
    "importlib_metadata",
    "lightning @ git+https://github.com/SmallPigPeppa/pytorch-lightning.git@npu_support_fp16_mixed",
]

[tool.uv]
conflicts = [
    [
        { extra = "lightning" },
        { extra = "lightning-npu" },
    ]
]